// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App-view generic tests When app is open 1`] = `
<div
  className="sc-fznzOf paqyy"
>
  <aside
    className="sc-AxjAm cRLJtR"
  >
    <div
      className="sc-AxirZ iluSoF"
    >
      <div
        className="sc-AxiKw bcuorQ"
      >
        <div
          className="sc-AxhCb jVvKPm"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="sc-AxgMl jGqmoB"
      >
        <input
          autoComplete="off"
          className="sc-AxheI cBGrTV"
          placeholder="Search component name"
          type="text"
          value=""
        />
        <div
          className="sc-Axmtr gmeduo"
        >
          <div
            className="sc-AxhUy hmNFUn"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="sc-fznyAO bkLnjh"
      >
        <div
          className="sc-fznKkj jkDQak"
        >
          <div
            className="sc-AxmLO kzOOLP"
          >
            <div
              className="sc-fzozJi yCqjT"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="sc-fzoLsD iUeVUF"
            >
              <div
                className="sc-fzpans cIwqpl"
              >
                <a
                  className="sc-fzplWN hXlTqQ"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-fznKkj jkDQak"
        >
          <div
            className="sc-AxmLO kzOOLP"
          >
            <div
              className="sc-fzozJi yCqjT"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="sc-fzoLsD iUeVUF"
            >
              <div
                className="sc-fzpans cIwqpl"
              >
                <a
                  className="sc-fzplWN hXlTqQ"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="sc-fznZeY iASHnM"
  >
    <article
      className="sc-fzoXWK khMgHS"
      id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="sc-fzpmMD cahimd"
        >
          Welcome!
        </h1>
        <div
          className="sc-fznxKY hrnXgF"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App-view generic tests When component is open 1`] = `
.c1 {
  overflow-x: hidden;
  width: 300px;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  position: fixed;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
  overflow-y: scroll;
  top: 0;
  left: 0;
  bottom: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 4px;
  padding-top: 16px;
}

.c4 {
  width: 32px;
  height: 32px;
  margin-bottom: 4px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c8 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 16px;
  height: 16px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c35 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c5 {
  position: relative;
  color: #ccc;
  padding: 0 12px;
  margin-bottom: 8px;
  font-family: sans-serif;
}

.c5:focus-within {
  color: #000;
}

.c6 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding: 6px 6px 6px 36px;
  border: 1px solid #ccc;
}

.c6:focus {
  border-color: #000;
}

.c6::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c7 {
  position: absolute;
  top: 50%;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c11 {
  display: block;
}

.c12 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13 {
  padding: 16px;
}

.c16 {
  padding: 16px;
  display: none;
}

.c14 {
  padding: 8px 16px;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7000e3;
  font-weight: 600;
}

.c17 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

.c9 {
  position: relative;
  font-family: sans-serif;
}

.c10 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c18 {
  padding: 32px;
  position: relative;
  width: 100%;
  background: #fff;
}

.c30 {
  display: block;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background: #f0f0f0;
  border-radius: 4px 4px 0 0;
  color: #000;
  padding: 0 16px;
}

.styleguide-sandbox .c31:only-child {
  border-radius: 4px;
}

.c32 {
  margin: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-size: 16px;
  font-weight: 300;
  font-family: sans-serif;
  padding: 16px 0;
  word-break: break-word;
}

.c33 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #202020;
  opacity: 0.5;
  -webkit-transition: opacity 0.1s ease;
  transition: opacity 0.1s ease;
  padding: 0 8px;
}

.c34:hover {
  opacity: 1;
}

.c36 {
  padding: 20px;
  border: 1px solid #f0f0f0;
  border-top: 0;
  box-shadow: 0 -1px 0 0 #f0f0f0;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c24 {
  padding-top: 32px;
}

.c25 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c26 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c27 {
  margin-top: 16px;
}

.c29 + .c28 {
  margin-top: 32px;
}

.c20 + .c19 {
  margin-top: 32px;
}

.c21 {
  max-width: 960px;
  min-width: 320px;
  margin: auto;
}

.c23 + .c22 {
  margin-top: 40px;
}

.c0 {
  background: #fff;
  display: grid;
  grid-template-columns: 300px auto;
}

<div
  className="c0"
>
  <aside
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="c5"
      >
        <input
          autoComplete="off"
          className="c6"
          placeholder="Search component name"
          type="text"
          value=""
        />
        <div
          className="c7"
        >
          <div
            className="c8"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="c9"
      >
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <div
              className="c12"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c13"
            >
              <div
                className="c14"
              >
                <a
                  className="c15"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <div
              className="c12"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="c16"
            >
              <div
                className="c14"
              >
                <a
                  className="c17"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c18"
  >
    <section
      className="c19 c20"
    >
      <div
        className="c21"
      >
        <div
          className="c22 c23"
        >
          <article
            className="c24"
            id="component"
          >
            <header
              className="styleguide-component__header"
            >
              <h1
                className="c25"
              >
                Component
              </h1>
              <div
                className="c26"
              >
                
              </div>
            </header>
            <div
              className="c27"
            >
              <div
                className="c28 c29"
              >
                <section
                  className="c30"
                  data-name="SpecComponentEmpty"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c31"
                  >
                    <h1
                      className="c32"
                      onClick={[Function]}
                    >
                      SpecComponentEmpty
                    </h1>
                    <div
                      className="c33"
                    >
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c36"
                    >
                      <article
                        className="c24"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c25"
                          />
                          <div
                            className="c26"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c28 c29"
              >
                <section
                  className="c30"
                  data-name="SpecComponentPropTypes"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c31"
                  >
                    <h1
                      className="c32"
                      onClick={[Function]}
                    >
                      SpecComponentPropTypes
                    </h1>
                    <div
                      className="c33"
                    >
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c36"
                    >
                      <article
                        className="c24"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c25"
                          />
                          <div
                            className="c26"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c28 c29"
              >
                <section
                  className="c30"
                  data-name="SpecComponentFull"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c31"
                  >
                    <h1
                      className="c32"
                      onClick={[Function]}
                    >
                      SpecComponentFull
                    </h1>
                    <div
                      className="c33"
                    >
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c34"
                        onClick={[Function]}
                      >
                        <div
                          className="c35"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c36"
                    >
                      <article
                        className="c24"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c25"
                          />
                          <div
                            className="c26"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`App-view generic tests When filter doesn\`t show components 1`] = `
.c1 {
  overflow-x: hidden;
  width: 300px;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  position: fixed;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
  overflow-y: scroll;
  top: 0;
  left: 0;
  bottom: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 4px;
  padding-top: 16px;
}

.c4 {
  width: 32px;
  height: 32px;
  margin-bottom: 4px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c8 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c5 {
  position: relative;
  color: #ccc;
  padding: 0 12px;
  margin-bottom: 8px;
  font-family: sans-serif;
}

.c5:focus-within {
  color: #000;
}

.c6 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding: 6px 6px 6px 36px;
  border: 1px solid #ccc;
}

.c6:focus {
  border-color: #000;
}

.c6::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c7 {
  position: absolute;
  top: 50%;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c9 {
  position: relative;
  font-family: sans-serif;
}

.c10 {
  padding: 32px;
  position: relative;
  width: 100%;
  background: #fff;
}

.c11 {
  padding-top: 32px;
}

.c12 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c13 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c0 {
  background: #fff;
  display: grid;
  grid-template-columns: 300px auto;
}

<div
  className="c0"
>
  <aside
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="c5"
      >
        <input
          autoComplete="off"
          className="c6"
          placeholder="Search component name"
          type="text"
          value="g"
        />
        <div
          className="c7"
        >
          <div
            className="c8"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="c9"
      />
    </div>
  </aside>
  <main
    className="c10"
  >
    <article
      className="c11"
      id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="c12"
        >
          Welcome!
        </h1>
        <div
          className="c13"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App-view generic tests When filter show components 1`] = `
.c1 {
  overflow-x: hidden;
  width: 300px;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  position: fixed;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
  overflow-y: scroll;
  top: 0;
  left: 0;
  bottom: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 4px;
  padding-top: 16px;
}

.c4 {
  width: 32px;
  height: 32px;
  margin-bottom: 4px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c8 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 16px;
  height: 16px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c33 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c5 {
  position: relative;
  color: #ccc;
  padding: 0 12px;
  margin-bottom: 8px;
  font-family: sans-serif;
}

.c5:focus-within {
  color: #000;
}

.c6 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding: 6px 6px 6px 36px;
  border: 1px solid #ccc;
}

.c6:focus {
  border-color: #000;
}

.c6::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c7 {
  position: absolute;
  top: 50%;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c11 {
  display: block;
}

.c12 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13 {
  padding: 16px;
}

.c14 {
  padding: 8px 16px;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #7000e3;
  font-weight: 600;
}

.c9 {
  position: relative;
  font-family: sans-serif;
}

.c10 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c16 {
  padding: 32px;
  position: relative;
  width: 100%;
  background: #fff;
}

.c28 {
  display: block;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background: #f0f0f0;
  border-radius: 4px 4px 0 0;
  color: #000;
  padding: 0 16px;
}

.styleguide-sandbox .c29:only-child {
  border-radius: 4px;
}

.c30 {
  margin: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-size: 16px;
  font-weight: 300;
  font-family: sans-serif;
  padding: 16px 0;
  word-break: break-word;
}

.c31 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #202020;
  opacity: 0.5;
  -webkit-transition: opacity 0.1s ease;
  transition: opacity 0.1s ease;
  padding: 0 8px;
}

.c32:hover {
  opacity: 1;
}

.c34 {
  padding: 20px;
  border: 1px solid #f0f0f0;
  border-top: 0;
  box-shadow: 0 -1px 0 0 #f0f0f0;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c22 {
  padding-top: 32px;
}

.c23 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c24 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c25 {
  margin-top: 16px;
}

.c27 + .c26 {
  margin-top: 32px;
}

.c18 + .c17 {
  margin-top: 32px;
}

.c19 {
  max-width: 960px;
  min-width: 320px;
  margin: auto;
}

.c21 + .c20 {
  margin-top: 40px;
}

.c0 {
  background: #fff;
  display: grid;
  grid-template-columns: 300px auto;
}

<div
  className="c0"
>
  <aside
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="c5"
      >
        <input
          autoComplete="off"
          className="c6"
          placeholder="Search component name"
          type="text"
          value="c"
        />
        <div
          className="c7"
        >
          <div
            className="c8"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="c9"
      >
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <div
              className="c12"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c13"
            >
              <div
                className="c14"
              >
                <a
                  className="c15"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c16"
  >
    <section
      className="c17 c18"
    >
      <div
        className="c19"
      >
        <div
          className="c20 c21"
        >
          <article
            className="c22"
            id="component"
          >
            <header
              className="styleguide-component__header"
            >
              <h1
                className="c23"
              >
                Component
              </h1>
              <div
                className="c24"
              >
                
              </div>
            </header>
            <div
              className="c25"
            >
              <div
                className="c26 c27"
              >
                <section
                  className="c28"
                  data-name="SpecComponentEmpty"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c29"
                  >
                    <h1
                      className="c30"
                      onClick={[Function]}
                    >
                      SpecComponentEmpty
                    </h1>
                    <div
                      className="c31"
                    >
                      <span
                        className="c32"
                        onClick={[Function]}
                      >
                        <div
                          className="c33"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c32"
                        onClick={[Function]}
                      >
                        <div
                          className="c33"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c34"
                    >
                      <article
                        className="c22"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c23"
                          />
                          <div
                            className="c24"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c26 c27"
              >
                <section
                  className="c28"
                  data-name="SpecComponentPropTypes"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c29"
                  >
                    <h1
                      className="c30"
                      onClick={[Function]}
                    >
                      SpecComponentPropTypes
                    </h1>
                    <div
                      className="c31"
                    >
                      <span
                        className="c32"
                        onClick={[Function]}
                      >
                        <div
                          className="c33"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c32"
                        onClick={[Function]}
                      >
                        <div
                          className="c33"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c34"
                    >
                      <article
                        className="c22"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c23"
                          />
                          <div
                            className="c24"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
              <div
                className="c26 c27"
              >
                <section
                  className="c28"
                  data-name="SpecComponentFull"
                  data-vrt-locator="sandbox"
                >
                  <header
                    className="c29"
                  >
                    <h1
                      className="c30"
                      onClick={[Function]}
                    >
                      SpecComponentFull
                    </h1>
                    <div
                      className="c31"
                    >
                      <span
                        className="c32"
                        onClick={[Function]}
                      >
                        <div
                          className="c33"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.444 2H2.556C1.696 2 1 2.696 1 3.556v9.333c0 .859.696 1.555 1.556 1.555h3.11V12.89h-3.11V5.11h10.888v7.778h-3.11v1.555h3.11c.856 0 1.556-.7 1.556-1.555V3.556C15 2.696 14.304 2 13.444 2zM8 6.667l-3.111 3.11h2.333v4.667h1.556V9.778h2.333L8 6.667z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        className="c32"
                        onClick={[Function]}
                      >
                        <div
                          className="c33"
                          role="presentation"
                        >
                          <svg
                            height="16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1 12h3v3h2v-5H1v2zm3-8H1v2h5V1H4v3zm6 11h2v-3h3v-2h-5v5zm2-11V1h-2v5h5V4h-3z"
                            />
                          </svg>
                        </div>
                      </span>
                    </div>
                  </header>
                  <div
                    data-vrt-locator="sandbox-content"
                  >
                    <div
                      className="c34"
                    >
                      <article
                        className="c22"
                      >
                        <header
                          className="styleguide-component__header"
                        >
                          <h1
                            className="c23"
                          />
                          <div
                            className="c24"
                          />
                        </header>
                      </article>
                    </div>
                  </div>
                </section>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`App-view generic tests When we open component from app 1`] = `
.c1 {
  overflow-x: hidden;
  width: 300px;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  position: fixed;
  background: #f0f0f0;
  border-right: 1px solid #f0f0f0;
  width: inherit;
  overflow-y: scroll;
  top: 0;
  left: 0;
  bottom: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 4px;
  padding-top: 16px;
}

.c4 {
  width: 32px;
  height: 32px;
  margin-bottom: 4px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 24px;
  height: 24px;
  fill: currentColor;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: inherit;
}

.c8 > svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: inherit;
  width: inherit;
  max-height: inherit;
  height: inherit;
  background: inherit;
  fill: inherit;
}

.c5 {
  position: relative;
  color: #ccc;
  padding: 0 12px;
  margin-bottom: 8px;
  font-family: sans-serif;
}

.c5:focus-within {
  color: #000;
}

.c6 {
  background-color: #fff;
  width: 100%;
  display: block;
  font-size: 16px;
  color: #303030;
  height: 40px;
  line-height: 32px;
  padding: 6px 6px 6px 36px;
  border: 1px solid #ccc;
}

.c6:focus {
  border-color: #000;
}

.c6::-webkit-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6:-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6::-moz-placeholder {
  color: #ccc;
  opacity: 1;
}

.c6:-ms-input-placeholder {
  color: #ccc;
  opacity: 1;
}

.c7 {
  position: absolute;
  top: 50%;
  left: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: inherit;
}

.c11 {
  display: block;
}

.c12 {
  position: relative;
  display: block;
  padding: 16px;
  border-bottom: 1px solid #f0f0f0;
  background: #fff;
  color: #000;
  font-size: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13 {
  padding: 16px;
  display: none;
}

.c14 {
  padding: 8px 16px;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #666;
}

.c9 {
  position: relative;
  font-family: sans-serif;
}

.c10 {
  position: relative;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c16 {
  padding: 32px;
  position: relative;
  width: 100%;
  background: #fff;
}

.c17 {
  padding-top: 32px;
}

.c18 {
  margin-top: 0;
  margin-bottom: 8px;
  font-size: 32px;
  color: #000;
  font-family: sans-serif;
  word-break: break-word;
}

.c19 {
  font-family: sans-serif;
  font-size: 16px;
  color: #a0a0a0;
  margin-bottom: 16px;
  max-width: 50%;
}

.c0 {
  background: #fff;
  display: grid;
  grid-template-columns: 300px auto;
}

<div
  className="c0"
>
  <aside
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <svg
            viewBox="0 0 44 44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#7000E3"
              height="44"
              rx="3.9"
              width="44"
            />
            <path
              d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
              fill="#FF671B"
            />
          </svg>
        </div>
      </div>
      <div
        className="c5"
      >
        <input
          autoComplete="off"
          className="c6"
          placeholder="Search component name"
          type="text"
          value=""
        />
        <div
          className="c7"
        >
          <div
            className="c8"
            role="presentation"
            size={0}
          >
            <svg
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <nav
        className="c9"
      >
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <div
              className="c12"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="c13"
            >
              <div
                className="c14"
              >
                <a
                  className="c15"
                  data-vrt-locator="link"
                  href="#Structure-Component"
                >
                  Component
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <div
              className="c12"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="c13"
            >
              <div
                className="c14"
              >
                <a
                  className="c15"
                  data-vrt-locator="link"
                  href="#Components-ErrorBoundary"
                >
                  ErrorBoundary
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="c16"
  >
    <article
      className="c17"
      id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="c18"
        >
          Welcome!
        </h1>
        <div
          className="c19"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;
